Final touches